2008-11-27  Philipp Kern  <phil@0x539.de>

	* po/fr.po: reviewed and completed French translation, thanks to
	Christian Perrier

2008-10-06  Philipp Kern  <phil@0x539.de>

	* po/fr.po: fixed typo in French translation (thanks to Lionel
	Porcheron)

2008-09-09  Philipp Kern  <phil@0x539.de>

	* configure.ac:
	* NEWS: bump version to 0.4.6, document the changes

2008-09-09  Philipp Kern  <phil@0x539.de>

	* po/LINGUAS:
	* po/oc.po: add new Occitan (post 1500) translation

2008-09-09  Philipp Kern  <phil@0x539.de>

	* src/Makefile.am, src/serialise/Makefile.am, test/Makefile.am: clean
	up include handling; first step to support distcheck

2008-09-08  Armin Burgmeier  <armin@0x539.de>

	* inc/client_buffer.hpp: Added a connect(const net6::address&)
	overload.

2008-09-08  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_avahi.cpp: Set scope ID of discovered IPv6 services,
	for link-local IPv6 to work.

2008-06-22  Armin Burgmeier  <armin@0x539.de>

	* src/zeroconf_howl.cpp: Don't throw exceptions in C callbacks.
	Instead, print the error to std::cerr as the avahi implementation
	does.

2007-12-27  Philipp Kern <phil@0x539.de>

	* src/zeroconf_avahi.cpp: compilation fix for non-IPv6 builds

2007-12-27  Philipp Kern <phil@0x539.de>

	* NEWS: document changes

2007-12-27  Philipp Kern <phil@0x539.de>

	* configure.ac: bump version to 0.4.5

2007-12-27  Philipp Kern <phil@0x539.de>

	* src/Makefile.am: bump SONAME versin to 1:0:0 due to the new
	  discover6_event().

2007-12-01  Philipp Kern <phil@0x539.de>

	* New Italian translation, thanks to Sergio Zanchetta.
	* Translation import from Rosetta.

2007-07-22  Philipp Kern <phil@0x539.de>

	* New Swedish translation by Daniel Nylander [fixes #283]

2007-07-14  Philipp Kern <phil@0x539.de>

	* src/delete_operation.cpp:
	* src/insert_operation.cpp:
	* src/jupiter_algorithm.cpp:
	* src/jupiter_client.cpp:
	* src/jupiter_server.cpp:
	* src/jupiter_undo.cpp:
	* src/no_operation.cpp:
	* src/operation.cpp:
	* src/record.cpp: